# rust-cookbook-note

./: Cargo.toml  README.md
cookbooktest/: Cargo.toml
docs/: 1.algorithm.md  2.algorithm.md  3.command.md  4.lisp.md  5.impl_vec.md  6.lock-free.md
docs/notes/: 1.about-copy-trait.md  2.op_rhs.md  3.rust_mod.md  4.sort.md  5.rust_async_test.md  5.simple-binary-tree.md  6.rust_as_ref_vs_as_deref.md
src/: algorithm.rs  algorithm_test.rs  command.rs  main.rs
src/notes/: README.md  alpha.rs  copy_trait.rs  mod.rs  op_rhs.rs  process_data_competition.rs  sort.rs
src/notes/as_ref_deref/: Cargo.toml
src/notes/as_ref_deref/src/: main.rs
src/notes/kvs/: .gitignore  Cargo.toml  README.md
src/notes/kvs/src/: error.rs  kv.rs  lib.rs  storage.rs  util.rs
src/notes/lisp1/: Cargo.toml
src/notes/lisp1/src/: lib.rs
src/notes/static-server/: Cargo.toml  README.md
src/notes/static-server/docs/: hyper-server.md
src/notes/static-server/src/: main.rs  mod.rs  server1.rs
src/notes/sync_send/: Cargo.toml  README.md
src/notes/sync_send/src/: lib.rs
src/notes/test_module/: mod.rs  one_file.rs  single_mod.rs
src/notes/test_module/crate_module/: Cargo.toml
src/notes/test_module/crate_module/src/: helper.rs  main.rs
src/notes/test_module/crate_module/src/services/: user_service.rs
toml2json/: Cargo.toml
toml2json/src/: lib.rs
