[package]
name = "cookbook"
version = "0.1.0"
authors = ["suhanyujie <suhanyujie@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
chrono = "0.4.13"

[workspace]
members = [
    "cookbooktest",
    "toml2json",
    "src/notes/static-server"
]

exclude = [
    "src/notes/kvs"
]
