[package]
name = "kvs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
raft = { git = "https://github.com/pingcap/raft-rs.git", tag = "v0.3.0" }
crc = "^1.8.1"
protobuf = "^2.0.2"
indexmap = "1.7.0"
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"
failure = "0.1.8"
serde_json = "1.0.79"
